--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,12 +1,14 @@
 .nav{
     grid-area: n;
-    background-color: black;    
+    background-color: black;  
+    padding: 20px;
 }
 
-.item {
+.item a {
     color: #fff;
+    text-decoration: none;
 }
-.item.active{
+.item a.activeLink{
     color: pink;
 }
 
